MOD: Adicionado Flurl e alterado nome do projeto Dominio para Servico

--- a/CopaDoMundo.Web.Dominio/CopaDoMundo.Web.Servico.csproj
+++ b/CopaDoMundo.Web.Dominio/CopaDoMundo.Web.Servico.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>CopaDoMundo.Web.Servico</AssemblyName>
+    <RootNamespace>CopaDoMundo.Web.Servico</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
