--- a/CopaDoMundo.Web.Cross/CopaDoMundo.Web.Cross.csproj
+++ b/CopaDoMundo.Web.Cross/CopaDoMundo.Web.Cross.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IoC\" />
+  </ItemGroup>
+
 </Project>
