Projeto MVC estruturado

--- a/CopaDoMundo.Web.Cross/CopaDoMundo.Web.Cross.csproj
+++ b/CopaDoMundo.Web.Cross/CopaDoMundo.Web.Cross.csproj
@@ -5,17 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.0" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CopaDoMundo.Web.Dominio\CopaDoMundo.Web.Servico.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\CopaDoMundo.Web.Servico\CopaDoMundo.Web.Servico.csproj" />
   </ItemGroup>
 
 </Project>
