--- a/CopaDoMundo.Web/appsettings.json
+++ b/CopaDoMundo.Web/appsettings.json
@@ -4,5 +4,24 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ServicoJogador": {
+    "Endpoint": "http://localhost:500/",
+    "Adicionar": "api/Jogador/Adicionar",
+    "Atualizar": "api/Jogador/Atualizar",
+    "BuscarPorId": "api/Jogador/BuscarPorId",
+    "BuscarPorselecao": "api/Jogador/BuscarPorSelecao",
+    "BuscarTodos": "api/Jogador/BuscarTodos",
+    "BuscarTodosAtivo": "api/Jogador/BuscarTodosAtivo",
+    "Remover": "api/Jogador/Remover"
+  },
+  "ServicoSelecao": {
+    "Endpoint": "http://localhost:500/",
+    "Adicionar": "api/Selecao/Adicionar",
+    "Atualizar": "api/Selecao/Atualizar",
+    "BuscarPorId": "api/Selecao/BuscarPorId",
+    "BuscarTodos": "api/Selecao/BuscarTodos",
+    "BuscarTodosAtivo": "api/Selecao/BuscarTodosAtivo",
+    "Remover": "api/Selecao/Remover"
   }
 }
