--- a/CopaDoMundo.Web.Servico/CopaDoMundo.Web.Servico.csproj
+++ b/CopaDoMundo.Web.Servico/CopaDoMundo.Web.Servico.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>CopaDoMundo.Web.Servico</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl" Version="2.7.1" />
+    <PackageReference Include="Flurl.Http" Version="2.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.1" />
+  </ItemGroup>
 </Project>
