--- a/CopaDoMundo.Web/CopaDoMundo.Web.csproj
+++ b/CopaDoMundo.Web/CopaDoMundo.Web.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\index.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CopaDoMundo.Web.Cross\CopaDoMundo.Web.Cross.csproj" />
     <ProjectReference Include="..\CopaDoMundo.Web.Servico\CopaDoMundo.Web.Servico.csproj" />
   </ItemGroup>
